--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/eslint": "1.9.0",
     "@nuxt/image": "1.11.0",
     "@nuxt/test-utils": "3.19.2",
+    "@nuxtjs/tailwindcss": "6.14.0",
     "eslint": "^9.35.0",
     "nuxt": "^3.19.1",
     "vue": "^3.5.21",
