--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "nuxt": "^3.19.1",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
+    "typescript": "^5.9.2"
   }
 }
