--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@nuxt/image": "1.11.0",
     "@nuxt/test-utils": "3.19.2",
     "@nuxtjs/tailwindcss": "6.14.0",
+    "@pinia/nuxt": "^0.11.2",
     "eslint": "^9.35.0",
     "nuxt": "^3.19.1",
+    "pinia": "^3.0.3",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
