--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "1.9.0",
+    "@nuxt/icon": "v1.15.0",
     "@nuxt/image": "1.11.0",
     "@nuxt/test-utils": "3.19.2",
     "@nuxtjs/tailwindcss": "6.14.0",
