test: add comprehensive unit tests for ProductService, covering variant selection and product merging

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest"
   },
   "dependencies": {
     "@nuxt/eslint": "1.9.0",
@@ -19,10 +20,12 @@
     "eslint": "^9.35.0",
     "nuxt": "^3.19.1",
     "pinia": "^3.0.3",
+    "vitest": "^3.2.4",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/node": "^24.4.0",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
     "typescript": "^5.9.2"
